// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`all /api/v3/sensors tests get list of all sensors GET > 0 1`] = `
Object {
  "altitude": Any<Number>,
  "author": Object {
    "display_name": null,
    "name": Any<String>,
  },
  "category": Object {
    "description": Any<String>,
    "id": Any<Number>,
    "name": Any<String>,
  },
  "connection_type": "http",
  "created_at": Any<String>,
  "description": null,
  "external_id": null,
  "icon_id": null,
  "id": 1,
  "latitude": Any<Number>,
  "location": null,
  "longitude": Any<Number>,
  "name": "test",
}
`;

exports[`single /api/v3/sensors/:sensorId tests should give us the sensor response 1`] = `
Object {
  "data": Array [
    Object {
      "altitude": Any<Number>,
      "author": Object {
        "display_name": null,
        "name": Any<String>,
      },
      "category": Object {
        "description": Any<String>,
        "id": Any<Number>,
        "name": Any<String>,
      },
      "connection_type": "http",
      "created_at": Any<String>,
      "description": null,
      "external_id": null,
      "icon_id": null,
      "id": 1,
      "latitude": Any<Number>,
      "location": null,
      "longitude": Any<Number>,
      "name": "test",
    },
  ],
}
`;
